--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,12 @@
   "dependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.20",
-    "cookie-parser": "~1.4.4",
+    "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "~4.16.1",
+    "fetch": "^1.1.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
