--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "fetch": "^1.1.0",
+    "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
