--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/google-maps": "^3.2.3",
+    "@types/google-maps-react": "^2.0.5",
     "@types/google.maps": "^3.45.6",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.16",
@@ -18,6 +19,7 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "fetch": "^1.1.0",
+    "google-maps-react": "^2.0.6",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
