--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/googlemaps": "^3.43.3",
     "@types/google-maps": "^3.2.3",
     "@types/google-maps-react": "^2.0.5",
     "@types/google.maps": "^3.45.6",
@@ -53,8 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/googlemaps": "^3.43.3"
   }
 }
