--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "start": "nodemon ./index.ts"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.20",
     "axios": "^0.21.1",
@@ -17,9 +19,5 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
-  },
-  "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12"
   }
 }
