--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "14.15.1"
   }
 }
